--- a/encriptacion/templates/encriptacion/resultados.html
+++ b/encriptacion/templates/encriptacion/resultados.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultados del Cifrado</title>
-    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
+    {% load static %}
+<link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 </head>
 <body>
     <div class="results-container">
